<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello Bluetooth</string>
    <string name="app_name">Speech2Text</string>
    <string name="title_activity_start_menue">StartMenue</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="client">Client</string>
    <string name="server">Server</string>

    <string name="eingabe">Hier Text eingeben!</string>
    <string name="senden">Text senden</string>

    <string name="listenerAN">Sprache an</string>
    <string name="listenerOFF">Sprache aus</string>

    <string name="spracheButton">Sprache</string>
    <string name="desc">Start Voice Record</string>


    <string name="info">Starten sie erst diese App, bevor Sie die Google Glass App öffnen!</string>
</resources>
